--- a/java/release_notes.txt
+++ b/java/release_notes.txt
@@ -1,3 +1,11 @@
+Mar 22, 2016: libphonenumber-7.2.9
+Metadata changes:
+ - Updated phone metadata for region code(s): CL, CN, FO, KE, SE, SO
+ - Updated short number metadata for region code(s): FO
+ - Updated geocoding data for country calling code(s): 86 (en, zh)
+ - Updated carrier data for country calling code(s):
+   86 (en), 252 (en), 254 (en)
+
 Mar 21, 2016: libphonenumber-7.2.8
 Metadata changes:
  - Updated phone metadata for region code(s): CL, CN, FO, KE, SE, SO
